// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextField clear button inputProps should be visible when value has white spaces only 1`] = `
<div
  className="root canClear"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value="  "
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField clear button inputProps should be visible when value is provided 1`] = `
<div
  className="root canClear"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value="abc"
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField clear button inputProps should not be visible when value is empty 1`] = `
<div
  className="root"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value=""
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField clear button inputProps should not be visible when value is provided but no clear handler 1`] = `
<div
  className="root"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value="abc"
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField clear button should be visible when value has white spaces only 1`] = `
<div
  className="root canClear"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value="  "
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField clear button should be visible when value is provided 1`] = `
<div
  className="root canClear"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value="abc"
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField clear button should not be visible when value is empty 1`] = `
<div
  className="root"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value=""
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField clear button should not be visible when value is provided but no clear handler 1`] = `
<div
  className="root"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value="abc"
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField should render with defaults 1`] = `
<div
  className="root"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value=""
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField should render with input props 1`] = `
<div
  className="root"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input first-name-field"
    data-automation="first-name-field"
    id="testTextField"
    onChange={[Function]}
    value="value"
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
  />
</div>
`;

exports[`TextField should render with valid false 1`] = `
<div
  className="root invalid"
>
  <FieldLabel
    id="testTextField"
    label=""
    raw={false}
    secondaryLabel=""
    tertiaryLabel=""
  />
  <input
    aria-describedby="testTextField-message"
    className="input"
    id="testTextField"
    onChange={[Function]}
    value=""
  />
  <span
    className="clearField"
    onMouseDown={[Function]}
  >
    <ClearField />
  </span>
  <FieldMessage
    id="testTextField-message"
    message=""
    messageProps={
      Object {
        "critical": false,
        "positive": false,
        "secondary": false,
      }
    }
    valid={false}
  />
</div>
`;
